--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://luanachen.com/"
 languageCode = "zh-Hans"
 # languageCode = "en-us"
 title = "L&C's SOHO"
